# basic-collision

./: .gitignore  AUTHORS  CMakeLists-example.txt  CMakeLists.txt  INSTALL
docs/: collision-detection.tex
include/: collision-helper.h  collision-one-many-boxes.h  collision-two-boxes.h  collision-two-rectangles.h  collision-two-triangles.h  operations-helper.h
others/: CMakeLists.txt  box-box-collision-detector.cpp  box-box-collision-detector.h  boxes-collision-detector.cpp  boxes-collision-detector.h  config  testBoxes.py
src/: collision-helper.cpp  collision-one-many-boxes.cpp  collision-two-boxes.cpp  collision-two-rectangles.cpp  collision-two-triangles.cpp  operations-helper.cpp
tests/: CMakeLists.txt  basicTest.cpp  simpleTestBox.cpp  simpleTestBoxes.cpp  simpleTestRectangle.cpp  simpleTestTriangle.cpp
